--- a/T-VistionNow.html
+++ b/T-VistionNow.html
@@ -253,6 +253,105 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
 
+    {
+     "name": "Sport TV 1",
+     "image": "https://dookeela.live/uploads/1663979709.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=2&tv=SportTV1",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "Sport TV 2",
+     "image": "https://dookeela.live/uploads/1663979801.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=3&tv=SportTV2",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "Sport TV 3",
+     "image": "https://dookeela.live/uploads/1663980327.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=5&tv=SportTV3",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "Sport TV 4",
+     "image": "https://dookeela.live/uploads/1664041351.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=11&tv=SportTV4",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "Sport TV 5",
+     "image": "https://dookeela.live/uploads/1664125991.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=13&tv=SportTV5",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "SPOTV 1",
+     "image": "https://dookeela.live/uploads/1664529562.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=59&tv=SPOTV",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "SPOTV 2",
+     "image": "https://dookeela.live/uploads/1664529575.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=60&tv=SPOTV2",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "SPL01",
+     "image": "https://dookeela.live/uploads/1726225121.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=524&tv=SPL01",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "SPL02",
+     "image": "https://dookeela.live/uploads/1726225130.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=525&tv=SPL02",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "PREMIER SPORTS 1 | UK",
+     "image": "https://dookeela.live/uploads/1715565710.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=365&tv=PREMIERSPORTS1|UK",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "PREMIER SPORTS 2 | UK",
+     "image": "https://dookeela.live/uploads/1715565724.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=366&tv=PREMIERSPORTS2|UK",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
 	
 	
 
