--- a/T-VistionNow.html
+++ b/T-VistionNow.html
@@ -10,6 +10,51 @@
 
 
     {
+     "name": "True Premier Football 1",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=38&tv=TruePremierFootball1",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "True Premier Football 2",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=39&tv=TruePremierFootball2",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "True Premier Football 3",
+     "image": "https://dookeela.live/uploads/1664499681.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=40&tv=TruePremierFootball3",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "True Premier Football 4",
+     "image": "https://dookeela.live/uploads/1664499692.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=41&tv=TruePremierFootball4",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
+     "name": "True Premier Football 5",
+     "image": "https://dookeela.live/uploads/1664499700.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=42&tv=TruePremierFootball5",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+    {
      "name": "True Sports 1",
      "image": "https://dookeela.live/uploads/1664802455.png",
      "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=74&tv=truesports1",
@@ -63,6 +108,113 @@
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
 
+{ 
+"name": "BeINSport 1", 
+"image": "https://dookeela.live/uploads/1664500365.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=44&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C1", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 1 (617)", 
+"image": "https://dookeela.live/uploads/1726690688.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=526&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C1(617)", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 1 (AIS)", 
+"image": "https://dookeela.live/uploads/1724849525.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=509&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C1(AIS)", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 2", 
+"image": "https://dookeela.live/uploads/1690843424.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=188&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C2", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 3", 
+"image": "https://dookeela.live/uploads/1663980670.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=6&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C3", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 4", 
+"image": "https://dookeela.live/uploads/1692816640.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=201&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C4", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 5", 
+"image": "https://dookeela.live/uploads/1693290376.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=202&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C5", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 6", 
+"image": "https://dookeela.live/uploads/1694719513.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=214&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C6", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 7", 
+"image": "https://dookeela.live/uploads/1694719622.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=215&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C7", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 8", 
+"image": "https://dookeela.live/uploads/1724241278.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=494&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C8", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 9", 
+"image": "https://dookeela.live/uploads/1724241287.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=495&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C9", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
+
+{ 
+"name": "BeINSport 10", 
+"image": "https://dookeela.live/uploads/1724346113.png", 
+"url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=496&tv=%E0%B8%9A%E0%B8%B5%E0%B8%AD%E0%B8%B4%E0%B8%99%E0%B8%AA%E0%B8%9B%E0%B8%AD%E0%B8%95%E0%B8%AA%E0%B9%8C10", 
+"info": "Nexter-BeINSport", 
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", 
+"playInNatPlayer": "true" 
+},
 
    {
      "name": "True Tennis HD",
