--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -123,30 +123,12 @@
 },
 
 {
-"name": "Nexter-URE-ALL",
+"name": "Nexter-URE-IPTV-ALL",
 "author": "Nexter",
 "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS9yWEoKxm-yEoJe_NdkaSU3XY_3uTjvpv1ZU0mtsJWeKjR4l5mjoRiM2MMnewpz01OIN4&usqp=CAU",
 "url": "https://drzl.short.gy/ReZ46l",
 "import": "true"
 },
-
-{
-"name": "Nexter-Watch-IPTV-ALL",
-"author": "Nexter",
-"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSgnV9n5glTl6nvkfU22sh0woDFv8LvRjoVQ&usqp=CAU",
-"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Watchlakorn.html",
-"import": "true"
-},
-
-
-
-{
-"name": "Nexter-ผู้เฒ่าพเนจร-ALL",
-"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaT8fTTFNRW4KEmYZ30qv5idR7IaeX_DA44ACUKVAgra_UPfgnSxskcdR56v8wLlpovxk&usqp=CAU",
-"url": "https://wandering-oldman.github.io/freetv2238/freetv2238.html",
-"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
-"import": false},
-
 
 
  {
@@ -176,7 +158,23 @@
 "import": "true"
 },
 
+{
+"name": "Nexter-Watch-IPTV-ALL",
+"author": "Nexter",
+"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSgnV9n5glTl6nvkfU22sh0woDFv8LvRjoVQ&usqp=CAU",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Watchlakorn.html",
+"import": "true"
+},
 
+
+
+{
+"name": "Nexter-ผู้เฒ่าพเนจร-ALL",
+"image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRaT8fTTFNRW4KEmYZ30qv5idR7IaeX_DA44ACUKVAgra_UPfgnSxskcdR56v8wLlpovxk&usqp=CAU",
+"url": "https://wandering-oldman.github.io/freetv2238/freetv2238.html",
+"info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
+"import": false},
+ 
 {
 "name": "Nexter-WEAREONE-ALL",
 "author": "Nexter",
