--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -76,21 +76,11 @@
 },
 
 
-
 {
 "name": "Nexter--หนังออนไลน์--VOD",
 "author": "Nexter",
-"image": "https://t3.ftcdn.net/jpg/04/23/92/78/360_F_423927894_T9UIBqoqC1XOwLXlYa8j38VyxLUxO8ii.jpg",
-"url": "https://docs.google.com/uc?export=download&id=1O1YWCtWgsbbkCjIM18j-Wr86cgrjrkVV",
-"import": "true"
-},
-
-
-{
-"name": "Nexter--ซีรี่ย์ออนไลน์--VOD",
-"author": "Nexter",
 "image": "https://as2.ftcdn.net/v2/jpg/04/23/92/79/1000_F_423927917_w4ACaqLIRByore0D1DkWLLiVJK2UbY6N.jpg",
-"url": "https://docs.google.com/uc?export=download&id=1GkuV1iE4E-sXHk09kPHQK3WiQIjGthc7",
+"url": "https://pastebin.com/raw/rwL9E0jb",
 "import": "true"
 },
 
@@ -173,15 +163,6 @@
 "info": "ฟรี!!! อย่านำไปจำหน่าย นะจ๊ะ! นะจ๊ะ!",
 "import": false},
  
-{
-"name": "Nexter-WEAREONE-ALL",
-"author": "Nexter",
-"image": "https://cdn.freebiesupply.com/logos/large/2x/one-1-logo-png-transparent.png",
-"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/WE%20ARE%20ONE%20ALL.html",
-"import": "true"
-},
-
-
 
 {
 "name": "Nexter-Backup-IPTV-ALL",
