--- a/NexterChannel.html
+++ b/NexterChannel.html
@@ -134,7 +134,7 @@
 "name": "Nexter-Dookeela-ALL",
 "author": "Nexter",
 "image": "https://upload.wikimedia.org/wikipedia/fr/thumb/5/58/Logo_DKL_Radio_Dreyeckland_2019.png/220px-Logo_DKL_Radio_Dreyeckland_2019.png",
-"url": "http://tiny.cc/euuazz",
+"url": "https://raw.githubusercontent.com/Tonnexter/Tonnexter/KhunKamMee/Dookeela1.html",
 "import": "true"
 },
 
